[package]
name = "unfold"
version = "0.2.0"
authors = ["Filippo Ranza <filipporanza@gmail.com>"]
edition = "2018"
description = "A simple unfold implementation in Rust"
license = "MIT"
repository = "https://github.com/FilippoRanza/unfold/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
